--- a/app/src/main/res/layout/activity_add_book_final.xml
+++ b/app/src/main/res/layout/activity_add_book_final.xml
@@ -105,7 +105,7 @@
                 android:maxLength="10000" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/current_pass_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -122,7 +122,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="5dp"
                     android:layout_weight="1"
                     android:text="$"
                     android:textSize="18sp" />
