--- a/app/src/main/res/layout/activity_add_book_final.xml
+++ b/app/src/main/res/layout/activity_add_book_final.xml
@@ -168,6 +168,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp" />
 
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+
             <Button
                 android:id="@+id/add_book_button"
                 android:layout_width="wrap_content"
