Made sure that a user is re-authenticated through Firebase when they change their password.

--- a/app/src/main/res/layout/activity_condition_description.xml
+++ b/app/src/main/res/layout/activity_condition_description.xml
@@ -25,6 +25,8 @@
                 android:id="@+id/canelButton"
                 android:layout_width="32dp"
                 android:layout_height="31dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginTop="4dp"
                 android:onClick="goBack"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -34,9 +36,9 @@
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginEnd="8dp"
                 android:text="Like New"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -45,8 +47,8 @@
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="10dp"
                 android:text="A book that looks as good as new with very limited signs of wear. All of the pages are intact and there are no tears or creasing. The binding is in excellent condition and there is no writing or highlighting on any of the pages. "
                 android:textSize="18sp" />
@@ -55,8 +57,8 @@
                 android:id="@+id/textView10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="Good"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -65,8 +67,8 @@
                 android:id="@+id/textView11"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="10dp"
                 android:text="A book that is good will show usual signs of wear which may be minimal cosmetic damages such as scuff marks and creasing. There are no missing pages and there is little if any writing/highlighting on the pages."
                 android:textSize="18sp" />
@@ -75,8 +77,8 @@
                 android:id="@+id/textView12"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="Poor"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -85,8 +87,8 @@
                 android:id="@+id/textView13"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="10dp"
                 android:text="A book that is poor may show visible signs of wear including stains, scuffs, rips, worn covers, writing or highlighting on the pages, and/or damage to the binding. The seller must make it clear to the buyer if any pages of the textbook are missing or are illegible."
                 android:textSize="18sp" />
